--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
     <main>
       <section class="section bg-solution">
         <div class="container solution">
-          <h1 class="solution-title">
-            Effective Solutions <br />
-            for Your Business
-          </h1>
+          <h1 class="solution-title">Effective Solutions for Your Business</h1>
 
           <button type="button" class="solution-button">Order Service</button>
         </div>
@@ -105,23 +102,31 @@
           <ul class="team-list">
             <li class="teammate-card">
               <img src="./images/our_team1.jpg" alt="teammate1" width="264" />
-              <h3 class="teammate-name">Mark Guerrero</h3>
-              <p class="teammate-proffession">Product Designer</p>
+              <div class="teammate-container">
+                <h3 class="teammate-name">Mark Guerrero</h3>
+                <p class="teammate-proffession">Product Designer</p>
+              </div>
             </li>
             <li class="teammate-card">
               <img src="./images/our_team2.jpg" alt="teammate2" width="264" />
-              <h3 class="teammate-name">Tom Ford</h3>
-              <p class="teammate-proffession">Frontend Developer</p>
+              <div class="teammate-container">
+                <h3 class="teammate-name">Tom Ford</h3>
+                <p class="teammate-proffession">Frontend Developer</p>
+              </div>
             </li>
             <li class="teammate-card">
               <img src="./images/our_team3.jpg" alt="teammate3" width="264" />
-              <h3 class="teammate-name">Camila Garcia</h3>
-              <p class="teammate-proffession">Marketing</p>
+              <div class="teammate-container">
+                <h3 class="teammate-name">Camila Garcia</h3>
+                <p class="teammate-proffession">Marketing</p>
+              </div>
             </li>
             <li class="teammate-card">
               <img src="./images/our_team4.jpg" alt="teammate4" width="264" />
-              <h3 class="teammate-name">Daniel Wilson</h3>
-              <p class="teammate-proffession">UI Designer</p>
+              <div class="teammate-container">
+                <h3 class="teammate-name">Daniel Wilson</h3>
+                <p class="teammate-proffession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -137,8 +142,10 @@
                 alt="portfolio-img1"
                 width="360"
               />
-              <h3 class="portfolio-item-title">Banking App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -146,8 +153,10 @@
                 alt="portfolio-img2"
                 width="360"
               />
-              <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -155,8 +164,10 @@
                 alt="portfolio-img3"
                 width="360"
               />
-              <h3 class="portfolio-item-title">Meditation App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -164,8 +175,10 @@
                 alt="portfolio-img4"
                 width="360"
               />
-              <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -173,8 +186,10 @@
                 alt="portfolio-img5"
                 width="360"
               />
-              <h3 class="portfolio-item-title">Screen Illustrations</h3>
-              <p class="portfolio-item-text">Design</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -182,8 +197,10 @@
                 alt="portfolio-img6"
                 width="360"
               />
-              <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
